# esl

./: README.MD  esl.cabal
data/: prostate.csv
examples/: Prostate.hs
src/ESL/: LinearRegression.hs
